--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<div class="grid-4">
 							
 							<p style=" text-align:left;">
-								I am an Assisstant Professor in the <a href="https://www.bath.ac.uk/departments/department-of-computer-science/">Department of Computer Science</a>, <a href="https://www.bath.ac.uk/">University of Bath</a>. I was fortunate to work as a Postdoctoral Researcher at  <a href="http://mmlab.ie.cuhk.edu.hk">MMLab@The Chinese University of Hong Kong</a>, advised by <a href='http://dahua.site'>Prof. Dahua Lin</a>. I received my Ph.D. degree from the Department of Computer Science, <a href="http://www.cityu.edu.hk/">City University of Hong Kong</a> under the supervision of <a href="http://www.cs.cityu.edu.hk/~rynson/"> Prof. Rynson W.H. Lau</a>. 
+								I am an Assistant Professor in the <a href="https://www.bath.ac.uk/departments/department-of-computer-science/">Department of Computer Science</a>, <a href="https://www.bath.ac.uk/">University of Bath</a>. I was fortunate to work as a Postdoctoral Researcher at  <a href="http://mmlab.ie.cuhk.edu.hk">MMLab@The Chinese University of Hong Kong</a>, advised by <a href='http://dahua.site'>Prof. Dahua Lin</a>. I received my Ph.D. degree from the Department of Computer Science, <a href="http://www.cityu.edu.hk/">City University of Hong Kong</a> under the supervision of <a href="http://www.cs.cityu.edu.hk/~rynson/"> Prof. Rynson W.H. Lau</a>. 
 								My research lies in the areas of computer graphics, vision, and machine learning.
 								Recently I'm interested in <i>unsupervised learning</i> and <i>data-driven graphic design with minimal annotated data</i>.
 								<br>
