--- a/index.html
+++ b/index.html
@@ -37,15 +37,14 @@
 						<div class="grid-4">
 							
 							<p style=" text-align:left;">
-								I am an Assistant Professor in the <a href="https://www.bath.ac.uk/departments/department-of-computer-science/">Department of Computer Science</a>, <a href="https://www.bath.ac.uk/">University of Bath</a>. I was fortunate to work as a Postdoctoral Researcher at  <a href="http://mmlab.ie.cuhk.edu.hk">MMLab@The Chinese University of Hong Kong</a>, advised by <a href='http://dahua.site'>Prof. Dahua Lin</a>. I received my Ph.D. degree from the Department of Computer Science, <a href="http://www.cityu.edu.hk/">City University of Hong Kong</a> under the supervision of <a href="http://www.cs.cityu.edu.hk/~rynson/"> Prof. Rynson W.H. Lau</a>. 
-								My research lies in the areas of computer graphics, vision, and machine learning.
-								Recently I'm interested in <i>unsupervised learning</i> and <i>data-driven graphic design with minimal annotated data</i>.
+								I am a Research Scientist at <a href="https://research.adobe.com">Adobe Research</a>. I was previously an Assistant Professor in the <a href="https://www.bath.ac.uk/departments/department-of-computer-science/">Department of Computer Science</a>, <a href="https://www.bath.ac.uk/">University of Bath</a>, and fortunate to work as a Postdoctoral Researcher at  <a href="http://mmlab.ie.cuhk.edu.hk">MMLab@The Chinese University of Hong Kong</a>, advised by <a href='http://dahua.site'>Prof. Dahua Lin</a>. I received my Ph.D. degree from the Department of Computer Science, <a href="http://www.cityu.edu.hk/">City University of Hong Kong</a> under the supervision of <a href="http://www.cs.cityu.edu.hk/~rynson/"> Prof. Rynson W.H. Lau</a>. During my Ph.D. study, I was lucky to be a visiting scholar at <a href="https://vcg.seas.harvard.edu">VCG@Harvard University</a> under the supervision of <a href="https://www.seas.harvard.edu/person/hanspeter-pfister"> Prof. Hanspeter Pfister</a>, and closely collaborated with <a href="https://research.adobe.com/person/zoya-bylinskii/"> Zoya Bylinskii </a> from Adobe Research. I was also lucky to work with <a href="https://scholar.google.com/citations?user=c3PYmxUAAAAJ&hl=en"> Steve Lin </a> and <a href="https://scholar.google.com/citations?user=lH4zgcIAAAAJ&hl=en"> Zhirong Wu </a> as an intern at Microsoft Research Asia (MSRA).
 								<br>
 								<br>
-								During my Ph.D. study, I was lucky to be a visiting scholar at <a href="https://vcg.seas.harvard.edu">VCG@Harvard University</a> under the supervision of <a href="https://www.seas.harvard.edu/person/hanspeter-pfister"> Prof. Hanspeter Pfister</a>, and closely collaborated with <a href="https://research.adobe.com/person/zoya-bylinskii/"> Zoya Bylinskii </a> from Adobe Research. I was also lucky to work with <a href="https://scholar.google.com/citations?user=c3PYmxUAAAAJ&hl=en"> Steve Lin </a> and <a href="https://scholar.google.com/citations?user=lH4zgcIAAAAJ&hl=en"> Zhirong Wu </a> as an intern at Microsoft Research Asia (MSRA). Prior to my Ph.D. study, I spent three wonderful years at <a href="http://en.scut.edu.cn/">South China University of Technology</a> and received my B.Eng degree. 
+								My research lies in the areas of computer graphics, computer vision/machine learning, and human-computer interaction.
+								Recently I am interested in <i>unsupervised learning</i> and <i>data-driven graphic design with minimal annotated data</i>. I am also interested in <i>content generation and manipulation</i>.
 								<br>
 								<br>
-								<span style="color:red">Our department has openings for self-motivated Ph.D. The University of Bath ranks 3rd in the intersection area among Computer Graphics, Computer Vision, and Human-Computer Interaction in UK according to <a href="http://csrankings.org/#/index?vision&graph&chi&uk">CSrankings</a>. MM-Lab is looking for motivated RAs with financial support. Remote collaboration is also welcome. Please drop me an email with your CV if you are interested in working with me.</span>
+								<span style="color:red">We are actively looking for research interns. If you are interested in doing research project(s) at Adobe or remote collaboration with me, please drop me an email with your CV.</span>
 								<br>
 								<br>
 							</p>
@@ -65,6 +64,57 @@
 					</div>
 					<br>
 					<br>
+					<div class="container">
+						<div class="row">
+							<div class="grid-2" style="height:200px; line-height:200px; ">
+								<img src="img/Unicolor_siga22.png" style="display: inline-block; vertical-align: middle;">
+							</div>
+							<div class="grid-4">
+								<h3>UniColor: A Unified Framework for Multi-Modal Colorization with Transformer</h3>
+								<p>Zhitong Huang<sup>*</sup>, Nanxuan Zhao<sup>*</sup>, Jing Liao</p>
+								<p><i>ACM Transactions on Graphics (Proc. SIGGRAPH Asia 2022)</i></p>
+								<br>
+								<a href="https://arxiv.org/abs/2209.11223">arXiv</a>
+								<a href="https://luckyhzt.github.io/unicolor">Project</a>
+							</div>
+						</div>
+					</div>
+					<br>
+					<br>
+					<div class="container">
+						<div class="row">
+							<div class="grid-2" style="height:200px; line-height:200px; ">
+								<img src="img/Pixelization_siga22.png" style="display: inline-block; vertical-align: middle;">
+							</div>
+							<div class="grid-4">
+								<h3>Make Your Own Sprites: Aliasing-Aware and Cell-Controllable Pixelization</h3>
+								<p>Zongwei Wu, Liangyu Chai, Nanxuan Zhao, Bailin Deng, Yongtuo Liu, Qiang Wen, Junle Wang, and Shengfeng He</p>
+								<p><i>ACM Transactions on Graphics (Proc. SIGGRAPH Asia 2022)</i></p>
+								<br>
+								<a href="./projects/pixelization/pixelization_siga22.pdf">Paper</a>
+								<a href="*">Project</a>
+							</div>
+						</div>
+					</div>
+					<br>
+					<br>
+					<div class="container">
+						<div class="row">
+							<div class="grid-2" style="height:200px; line-height:200px; ">
+								<img src="img/CityNerf_eccv22.gif" style="display: inline-block; vertical-align: middle;">
+							</div>
+							<div class="grid-4">
+								<h3>BungeeNeRF: Progressive Neural Radiance Field for Extreme Multi-scale Scene Rendering</h3>
+								<p>Yuanbo Xiangli<sup>*</sup>, Linning Xu<sup>*</sup>, Xingang Pan, Nanxuan Zhao, Anyi Rao, Christian Theobalt, Bo Dai, and Dahua Lin</p>
+								<p><i>European Conference on Computer Vision (ECCV), 2022</i></p>
+								<br>
+								<a href="https://arxiv.org/abs/2112.05504">arxiv</a>
+								<a href="https://city-super.github.io/citynerf/">Project</a>
+							</div>
+						</div>
+					</div>
+					<br>
+					<br>
 						<div class="container">
 						<div class="row">
 							<div class="grid-2" style="height:200px; line-height:200px; ">
@@ -73,7 +123,7 @@
 							<div class="grid-4">
 								<h3>TransRank: Self-supervised Video Representation Learning via Ranking-based Transformation Recognition</h3>
 								<p>Haodong Duan, Nanxuan Zhao<sup>#</sup>, Kai Chen, Dahua Lin</p>
-								<p>Computer Vision and Pattern Recognition (CVPR), 2022 <span style="color:red">(Oral)</span></p>
+								<p><i>Computer Vision and Pattern Recognition (CVPR), 2022 <span style="color:red">(Oral)</span></i></p>
 								<br>
 								<a href="https://arxiv.org/abs/2205.02028">arXiv</a>
 								<a href="#">Project</a>
@@ -90,7 +140,7 @@
 							<div class="grid-4">
 								<h3>BlockPlanner: City Block Generation with Vectorized Graph Representation</h3>
 								<p>Linning Xu<sup>*</sup>, Yuanbo Xiangli<sup>*</sup>, Anyi Rao, Nanxuan Zhao, Bo Dai, Ziwei Liu, Dahua Lin</p>
-								<p>International Conference on Computer Vision (ICCV), 2021</p>
+								<p><i>International Conference on Computer Vision (ICCV), 2021</i></p>
 								<br>
 								<a href="./projects/BlockPlanner/BlockPlanner_ICCV_2021_paper.pdf">Paper</a>
 								<a href="./projects/BlockPlanner/BlockPlanner_ICCV_2021_supplemental.pdf">Supp</a>
@@ -107,7 +157,7 @@
 							<div class="grid-4">
 								<h3>Selective Region-based Photo Color Adjustment for Graphic Designs</h3>
 								<p>Nanxuan Zhao, Quanlong Zheng, Jing Liao, Ying Cao, Hanspeter Pfister, Rynson W. H. Lau</p>
-								<p>ACM Transactions on Graphics (presented at SIGGRAPH 2021 and VIS 2021)</p>
+								<p><i>ACM Transactions on Graphics (presented at SIGGRAPH 2021 and VIS 2021)</i></p>
 								<br>
 								<a href="./projects/GD_recolor/Graphic_Design_Recolor_TOG21_zhao.pdf">PDF</a>
 								<a href="http://nxzhao.com/projects/GD_recolor">Project</a>
@@ -124,7 +174,7 @@
 							<div class="grid-4">
 								<h3>What Makes Instance Discrimination Good for Transfer Learning?</h3>
 								<p>Nanxuan Zhao<sup>*</sup>, Zhirong Wu<sup>*</sup>, Rynson W. H. Lau, Stephen Lin</p>
-								<p>International Conference on Learning Representations (ICLR), 2021</p>
+								<p><i>International Conference on Learning Representations (ICLR), 2021</i></p>
 								<br>
 								<a href="https://arxiv.org/pdf/2006.06606">arXiv</a>
 								<a href="http://nxzhao.com/projects/good_transfer">Project</a>
@@ -141,7 +191,7 @@
 							<div class="grid-4">
 								<h3>Distilling Localization for Self-Supervised Representation Learning</h3>
 								<p>Nanxuan Zhao<sup>*</sup>, Zhirong Wu<sup>*</sup>, Rynson W. H. Lau, Stephen Lin</p>
-								<p>AAAI Conference on Artificial Intelligence (AAAI), 2021 </p>
+								<p><i>AAAI Conference on Artificial Intelligence (AAAI), 2021</i></p>
 								<br>
 								<a href="https://arxiv.org/pdf/2004.06638">arXiv</a>
 								<a href="http://nxzhao.com/projects/DiLo_localization">Project</a>
@@ -170,7 +220,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="grid-2" style="height:200px; line-height:200px; ">
-								<img src="img/VIF.pdf" style="display: inline-block; vertical-align: middle;">
+								<img src="img/VIF.jpg" style="display: inline-block; vertical-align: middle;">
 							</div>
 							<div class="grid-4">
 								<h3>Exploring Visual Information Flows in Infographics</h3>
@@ -237,23 +287,17 @@
 				</section>
 			<br>
 			<br>
-		<!--Honor&award-->
+		<!--Experience-->
 			<div class="center">
 					<div style="width: 100%; height: 20px; border-bottom: 1px solid #ccc; text-align: center">
 					<span style=" font-size: 1.8em; font-family: 'Lato', sans-serif; background-color: #FFF; padding: 0 10px;">
-						<strong>Honors & Awards</strong>
+						<strong>Experience and Collaborations</strong>
 					</span>
 					</div>
 					<br>
 					<br>
 					<ul>
-						<li>Outstanding Academic Performance Award (CityU), 2018</li>
-						<li>Research Tuition Scholarships (CityU), 2018</li>
-						<li>Mitacs Globalink Scholarship (Canada), 2015</li>
-						<li>China Scholarship Council (CSC) Scholarship, 2015</li>
-						<li>Meritorious Winner of the Interdisciplinary Contest In Modeling (USA), 2015</li>
-						<li>Bronze Medal of the ACM-ICPC Asia Regional Contest (Shanghai Site), 2014</li>
-						<li>National Encouragement Scholarship awarded by Ministry of Education of China (twice), 2012-2013 & 2013-2014</li>
+						<img src="img/experience.jpg" style="display: inline-block; vertical-align: middle;"> 
 					</ul>
 			</div>
 			<br>
@@ -262,7 +306,7 @@
 		<!--Footer-->
 		<footer class="center">
 			<hr>
-			<span>&copy; Nanxuan Zhao | Last updated: May 2022</span>
+			<span>&copy; Nanxuan Zhao | Last updated: Nov 2022</span>
 		</footer>
 		
 	</div><!-- End Container -->
