--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  
+    
 <head>
 	<meta charset="utf-8" />
 	<title>Nanxuan Zhao</title>
@@ -67,6 +67,43 @@
 					<div class="container">
 						<div class="row">
 							<div class="grid-2" style="height:200px; line-height:200px; ">
+								<img src="img/neural_preset.gif" style="display: inline-block; vertical-align: middle;">
+							</div>
+							<div class="grid-4">
+								<h3>Neural Preset for Color Style Transfer</h3>
+								<p>Zhanghan Ke, Yuhao Liu, Lei Zhu, Nanxuan Zhao, Rynson W.H. Lau</p>
+								<p><i>Computer Vision and Pattern Recognition (CVPR), 2023</i></p>
+								<br>
+								<a href="https://arxiv.org/abs/2303.13511">arXiv</a>
+								<a href="https://zhkkke.github.io/NeuralPreset/#/">Project</a>
+								<a href="https://github.com/ZHKKKe/NeuralPreset">Code</a>
+								<a href="https://zhkkke.github.io/NeuralPreset/#/editor">Online Demo</a>
+								<a href="https://apps.apple.com/us/app/tinge-creative-photo-filters/id6445956281">IOS App</a>
+							</div>
+						</div>
+					</div>
+					<br>
+					<br>
+					<div class="container">
+						<div class="row">
+							<div class="grid-2" style="height:200px; line-height:200px; ">
+								<img src="img/gridNerf.gif" style="display: inline-block; vertical-align: middle;">
+							</div>
+							<div class="grid-4">
+								<h3>Grid-guided Neural Radiance Fields for Large Urban Scenes</h3>
+								<p>Linning Xu, Yuanbo Xiangli, Sida Peng, Xingang Pan, Nanxuan Zhao, Christian Theobalt, Bo Dai, Dahua Lin</p>
+								<p><i>Computer Vision and Pattern Recognition (CVPR), 2023</i></p>
+								<br>
+								<a href="hhttps://arxiv.org/abs/2303.14001">arXiv</a>
+								<a href="https://city-super.github.io/gridnerf/">Project</a>
+							</div>
+						</div>
+					</div>
+					<br>
+					<br>
+					<div class="container">
+						<div class="row">
+							<div class="grid-2" style="height:200px; line-height:200px; ">
 								<img src="img/Unicolor_siga22.png" style="display: inline-block; vertical-align: middle;">
 							</div>
 							<div class="grid-4">
@@ -76,6 +113,7 @@
 								<br>
 								<a href="https://arxiv.org/abs/2209.11223">arXiv</a>
 								<a href="https://luckyhzt.github.io/unicolor">Project</a>
+								<a href="https://github.com/luckyhzt/unicolor">Code</a>
 							</div>
 						</div>
 					</div>
@@ -92,7 +130,7 @@
 								<p><i>ACM Transactions on Graphics (Proc. SIGGRAPH Asia 2022)</i></p>
 								<br>
 								<a href="./projects/pixelization/pixelization_siga22.pdf">Paper</a>
-								<a href="*">Project</a>
+								<a href="https://github.com/WuZongWei6/Pixelization">Code</a>
 							</div>
 						</div>
 					</div>
@@ -110,6 +148,7 @@
 								<br>
 								<a href="https://arxiv.org/abs/2112.05504">arxiv</a>
 								<a href="https://city-super.github.io/citynerf/">Project</a>
+								<a href="https://github.com/city-super/BungeeNeRF">Code</a>
 							</div>
 						</div>
 					</div>
@@ -126,7 +165,7 @@
 								<p><i>Computer Vision and Pattern Recognition (CVPR), 2022 <span style="color:red">(Oral)</span></i></p>
 								<br>
 								<a href="https://arxiv.org/abs/2205.02028">arXiv</a>
-								<a href="#">Project</a>
+								<a href="https://github.com/kennymckormick/TransRank">Code</a>
 							</div>
 						</div>
 					</div>
@@ -306,7 +345,7 @@
 		<!--Footer-->
 		<footer class="center">
 			<hr>
-			<span>&copy; Nanxuan Zhao | Last updated: Nov 2022</span>
+			<span>&copy; Nanxuan Zhao | Last updated: Mar 2023</span>
 		</footer>
 		
 	</div><!-- End Container -->
