--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 								<p>Linning Xu, Yuanbo Xiangli, Sida Peng, Xingang Pan, Nanxuan Zhao, Christian Theobalt, Bo Dai, Dahua Lin</p>
 								<p><i>Computer Vision and Pattern Recognition (CVPR), 2023</i></p>
 								<br>
-								<a href="hhttps://arxiv.org/abs/2303.14001">arXiv</a>
+								<a href="https://arxiv.org/abs/2303.14001">arXiv</a>
 								<a href="https://city-super.github.io/gridnerf/">Project</a>
 							</div>
 						</div>
