--- a/index.html
+++ b/index.html
@@ -67,6 +67,90 @@
 					<div class="container">
 						<div class="row">
 							<div class="grid-2" style="height:200px; line-height:200px; ">
+								<img src="img/text2vector.png" style="display: inline-block; vertical-align: middle;">
+							</div>
+							<div class="grid-4">
+								<h3>Text-Guided Vector Graphics Customization</h3>
+								<p>Peiying Zhang, Nanxuan Zhao, Jing Liao</p>
+								<p><i>SIGGRAPH Asia 2023</i></p>
+								<br>
+								<a href=#>arXiv</a>
+								<a href=#>Project</a>
+							</div>
+						</div>
+					</div>
+					<br>
+					<br>
+					<div class="container">
+						<div class="row">
+							<div class="grid-2" style="height:200px; line-height:200px; ">
+								<img src="img/clipart2.png" style="display: inline-block; vertical-align: middle;">
+							</div>
+							<div class="grid-4">
+								<h3>Bring Clipart to Life</h3>
+								<p>Nanxuan Zhao, Shengqi Dang, Hexun Lin, Yang Shi, Nan Cao</p>
+								<p><i>International Conference on Computer Vision (ICCV), 2023</i></p>
+								<br>
+								<a href=#>arXiv</a>
+								<a href=#>Project</a>
+							</div>
+						</div>
+					</div>
+					<br>
+					<br>
+					<div class="container">
+						<div class="row">
+							<div class="grid-2" style="height:200px; line-height:200px; ">
+								<img src="img/AssetField.gif" style="display: inline-block; vertical-align: middle;">
+							</div>
+							<div class="grid-4">
+								<h3>AssetField: Assets Mining and Reconfiguration in Ground Feature Plane Representation</h3>
+								<p>Yuanbo Xiangli, Linning Xu, Xingang Pan, Nanxuan Zhao, Bo Dai, Dahua Lin</p>
+								<p><i>International Conference on Computer Vision (ICCV), 2023</i></p>
+								<br>
+								<a href="https://arxiv.org/abs/2303.13953">arXiv</a>
+								<a href="https://city-super.github.io/assetfield/">Project</a>
+							</div>
+						</div>
+					</div>
+					<br>
+					<br>
+					<div class="container">
+						<div class="row">
+							<div class="grid-2" style="height:200px; line-height:200px; ">
+								<img src="img/LangRecol.png" style="display: inline-block; vertical-align: middle;">
+							</div>
+							<div class="grid-4">
+								<h3>Language-based Photo Color Adjustment for Graphic Designs</h3>
+								<p>Zhenwei Wang<sup>*</sup>, Nanxuan Zhao<sup>*</sup>, Gerhard Hancke, Rynson W.H. Lau</p>
+								<p><i>ACM Transactions on Graphics (Proc. SIGGRAPH 2023)</i></p>
+								<br>
+								<a href=#>arXiv</a>
+								<a href=#>Project</a>
+							</div>
+						</div>
+					</div>
+					<br>
+					<br>
+					<div class="container">
+						<div class="row">
+							<div class="grid-2" style="height:200px; line-height:200px; ">
+								<img src="img/FashionTex.png" style="display: inline-block; vertical-align: middle;">
+							</div>
+							<div class="grid-4">
+								<h3>FashionTex: Controllable Virtual Try-on with Text and Texture</h3>
+								<p>Anran Lin, Nanxuan Zhao, Shuliang Ning, Yuda Qiu, Baoyuan Wang, Xiaoguang Han</p>
+								<p><i>SIGGRAPH 2023</i></p>
+								<br>
+								<a href="https://arxiv.org/abs/2305.04451">arXiv</a>
+							</div>
+						</div>
+					</div>
+					<br>
+					<br>
+					<div class="container">
+						<div class="row">
+							<div class="grid-2" style="height:200px; line-height:200px; ">
 								<img src="img/neural_preset.gif" style="display: inline-block; vertical-align: middle;">
 							</div>
 							<div class="grid-4">
@@ -345,7 +429,7 @@
 		<!--Footer-->
 		<footer class="center">
 			<hr>
-			<span>&copy; Nanxuan Zhao | Last updated: Mar 2023</span>
+			<span>&copy; Nanxuan Zhao | Last updated: Aug 2023</span>
 		</footer>
 		
 	</div><!-- End Container -->
