--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 								<p>Peiying Zhang, Nanxuan Zhao, Jing Liao</p>
 								<p><i>SIGGRAPH Asia 2023</i></p>
 								<br>
-								<a href=#>arXiv</a>
-								<a href=#>Project</a>
+								<a href="https://arxiv.org/abs/2309.12302">arXiv</a>
+								<a href="https://intchous.github.io/SVGCustomization/">Project</a>
 							</div>
 						</div>
 					</div>
@@ -91,7 +91,7 @@
 								<p>Nanxuan Zhao, Shengqi Dang, Hexun Lin, Yang Shi, Nan Cao</p>
 								<p><i>International Conference on Computer Vision (ICCV), 2023</i></p>
 								<br>
-								<a href=#>arXiv</a>
+								<a href="https://openaccess.thecvf.com/content/ICCV2023/papers/Zhao_Bring_Clipart_to_Life_ICCV_2023_paper.pdf">PDF</a>
 								<a href=#>Project</a>
 							</div>
 						</div>
@@ -125,8 +125,8 @@
 								<p>Zhenwei Wang<sup>*</sup>, Nanxuan Zhao<sup>*</sup>, Gerhard Hancke, Rynson W.H. Lau</p>
 								<p><i>ACM Transactions on Graphics (Proc. SIGGRAPH 2023)</i></p>
 								<br>
-								<a href=#>arXiv</a>
-								<a href=#>Project</a>
+								<a href="https://arxiv.org/abs/2308.03059">arXiv</a>
+								<a href="https://zhenwwang.github.io/langrecol/">Project</a>
 							</div>
 						</div>
 					</div>
