--- a/index.html
+++ b/index.html
@@ -67,6 +67,55 @@
 					<div class="container">
 						<div class="row">
 							<div class="grid-2" style="height:200px; line-height:200px; ">
+								<img src="img/chi2024.png" style="display: inline-block; vertical-align: middle;">
+							</div>
+							<div class="grid-4">
+								<h3>Personalizing Products with Stylized Head Portraits for Self-Expression</h3>
+								<p>Yang Shi, Yechun Peng, Shengqi Dang, Nanxuan Zhao, Nan Cao</p>
+								<p><i>ACM Conference on Human Factors in Computing Systems (CHI), 2024</i></p>
+								<br>
+								<a href="#">Paper</a>
+							</div>
+						</div>
+					</div>
+					<br>
+					<br>
+					<div class="container">
+						<div class="row">
+							<div class="grid-2" style="height:200px; line-height:200px; ">
+								<img src="img/iclr23.png" style="display: inline-block; vertical-align: middle;">
+							</div>
+							<div class="grid-4">
+								<h3>Localizing and Editing Knowledge in Text-to-Image Generative Models</h3>
+								<p>Samyadeep Basu, Nanxuan Zhao, Vlad Morariu, Soheil Feizi, Varun Manjunatha</p>
+								<p><i>ICLR 2023</i></p>
+								<br>
+								<a href="https://arxiv.org/abs/2310.13730">arXiv</a>
+							</div>
+						</div>
+					</div>
+					<br>
+					<br>
+					<div class="container">
+						<div class="row">
+							<div class="grid-2" style="height:200px; line-height:200px; ">
+								<img src="img/photoswap.png" style="display: inline-block; vertical-align: middle;">
+							</div>
+							<div class="grid-4">
+								<h3>PHOTOSWAP: Personalized Subject Swapping in Images</h3>
+								<p>Jing Gu, Yilin Wang, Nanxuan Zhao, Tsu-Jui Fu, Wei Xiong, Qing Liu, Zhifei Zhang, He Zhang, Jianming Zhang, HyunJoon Jung, Xin Eric Wang</p>
+								<p><i>NeurIPS 2023</i></p>
+								<br>
+								<a href="https://arxiv.org/abs/2305.18286">arXiv</a>
+								<a href="https://photoswap.github.io/">Project</a>
+							</div>
+						</div>
+					</div>
+					<br>
+					<br>
+					<div class="container">
+						<div class="row">
+							<div class="grid-2" style="height:200px; line-height:200px; ">
 								<img src="img/text2vector.png" style="display: inline-block; vertical-align: middle;">
 							</div>
 							<div class="grid-4">
