--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 							<div class="grid-4">
 								<h3>Localizing and Editing Knowledge in Text-to-Image Generative Models</h3>
 								<p>Samyadeep Basu, Nanxuan Zhao, Vlad Morariu, Soheil Feizi, Varun Manjunatha</p>
-								<p><i>ICLR 2023</i></p>
+								<p><i>International Conference on Learning Representations (ICLR) 2023</i></p>
 								<br>
 								<a href="https://arxiv.org/abs/2310.13730">arXiv</a>
 							</div>
@@ -104,7 +104,7 @@
 							<div class="grid-4">
 								<h3>PHOTOSWAP: Personalized Subject Swapping in Images</h3>
 								<p>Jing Gu, Yilin Wang, Nanxuan Zhao, Tsu-Jui Fu, Wei Xiong, Qing Liu, Zhifei Zhang, He Zhang, Jianming Zhang, HyunJoon Jung, Xin Eric Wang</p>
-								<p><i>NeurIPS 2023</i></p>
+								<p><i>Conference on Neural Information Processing Systems (NeurIPS) 2023</i></p>
 								<br>
 								<a href="https://arxiv.org/abs/2305.18286">arXiv</a>
 								<a href="https://photoswap.github.io/">Project</a>
