--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 						<div class="grid-4">
 							
 							<p style=" text-align:left;">
-								I am a Research Scientist at <a href="https://research.adobe.com">Adobe Research</a>. I was previously an Assistant Professor in the <a href="https://www.bath.ac.uk/departments/department-of-computer-science/">Department of Computer Science</a>, <a href="https://www.bath.ac.uk/">University of Bath</a>, and fortunate to work as a Postdoctoral Researcher at  <a href="http://mmlab.ie.cuhk.edu.hk">MMLab@The Chinese University of Hong Kong</a>, advised by <a href='http://dahua.site'>Prof. Dahua Lin</a>. I received my Ph.D. degree from the Department of Computer Science, <a href="http://www.cityu.edu.hk/">City University of Hong Kong</a> under the supervision of <a href="http://www.cs.cityu.edu.hk/~rynson/"> Prof. Rynson W.H. Lau</a>. During my Ph.D. study, I was lucky to be a visiting scholar at <a href="https://vcg.seas.harvard.edu">VCG@Harvard University</a> under the supervision of <a href="https://www.seas.harvard.edu/person/hanspeter-pfister"> Prof. Hanspeter Pfister</a>, and closely collaborated with <a href="https://research.adobe.com/person/zoya-bylinskii/"> Zoya Bylinskii </a> from Adobe Research. I was also lucky to work with <a href="https://scholar.google.com/citations?user=c3PYmxUAAAAJ&hl=en"> Steve Lin </a> and <a href="https://scholar.google.com/citations?user=lH4zgcIAAAAJ&hl=en"> Zhirong Wu </a> as an intern at Microsoft Research Asia (MSRA).
+								I  am a <a href="https://research.adobe.com/news/building-technologies-to-help-people-express-their-creativity/">Research Scientist</a> at <a href="https://research.adobe.com">Adobe Research</a>. I was previously an Assistant Professor in the <a href="https://www.bath.ac.uk/departments/department-of-computer-science/">Department of Computer Science</a>, <a href="https://www.bath.ac.uk/">University of Bath</a>, and fortunate to work as a Postdoctoral Researcher at  <a href="http://mmlab.ie.cuhk.edu.hk">MMLab@The Chinese University of Hong Kong</a>, advised by <a href='http://dahua.site'>Prof. Dahua Lin</a>. I received my Ph.D. degree from the Department of Computer Science, <a href="http://www.cityu.edu.hk/">City University of Hong Kong</a> under the supervision of <a href="http://www.cs.cityu.edu.hk/~rynson/"> Prof. Rynson W.H. Lau</a>. During my Ph.D. study, I was lucky to be a visiting scholar at <a href="https://vcg.seas.harvard.edu">VCG@Harvard University</a> under the supervision of <a href="https://www.seas.harvard.edu/person/hanspeter-pfister"> Prof. Hanspeter Pfister</a>, and closely collaborated with <a href="https://research.adobe.com/person/zoya-bylinskii/"> Zoya Bylinskii </a> from Adobe Research. I was also lucky to work with <a href="https://scholar.google.com/citations?user=c3PYmxUAAAAJ&hl=en"> Steve Lin </a> and <a href="https://scholar.google.com/citations?user=lH4zgcIAAAAJ&hl=en"> Zhirong Wu </a> as an intern at Microsoft Research Asia (MSRA).
 								<br>
 								<br>
 								My research lies in the areas of computer graphics, computer vision/machine learning, and human-computer interaction.
-								Recently I am interested in <i>unsupervised learning</i> and <i>data-driven graphic design with minimal annotated data</i>. I am also interested in <i>content generation and manipulation</i>.
+								Recently I am interested in using data wisely for <i>content generation & editing</i> and <i>data-driven graphic design</i>. I am more focus on multi-modal control for customizing pixels, vectors, and 3D shapes.
 								<br>
 								<br>
 								<span style="color:red">We are actively looking for research interns. If you are interested in doing research project(s) at Adobe or remote collaboration with me, please drop me an email with your CV.</span>
@@ -67,6 +67,86 @@
 					<div class="container">
 						<div class="row">
 							<div class="grid-2" style="height:200px; line-height:200px; ">
+								<img src="img/sig24.jpeg" style="display: inline-block; vertical-align: middle;">
+							</div>
+							<div class="grid-4">
+								<h3>Text-to-vector Generation With Neural Path Representation</h3>
+								<p>Peiying Zhang, Nanxuan Zhao, Jing Liao</p>
+								<p><i>ACM Transactions on Graphics (Proc. SIGGRAPH 2024)</i></p>
+								<br>
+								<a href="#">Coming soon ...</a>
+							</div>
+						</div>
+					</div>
+					<br>
+					<br>
+					<div class="container">
+						<div class="row">
+							<div class="grid-2" style="height:200px; line-height:200px; ">
+								<img src="img/sig24.jpeg" style="display: inline-block; vertical-align: middle;">
+							</div>
+							<div class="grid-4">
+								<h3>IntrinsicDiffusion: Joint Intrinsic Layers From Latent Diffusion Models</h3>
+								<p>Jundan Luo, Duygu Ceylan, Jae Shin Yoon, Nanxuan Zhao, Julien Philip, Anna Frühstück, Wenbin Li, Christian Richardt, Tuanfeng Wang</p>
+								<p><i>Siggraph 2024</i></p>
+								<br>
+								<a href="#">Coming soon ...</a>
+							</div>
+						</div>
+					</div>
+					<br>
+					<br>
+					<div class="container">
+						<div class="row">
+							<div class="grid-2" style="height:200px; line-height:200px; ">
+								<img src="img/cvpr24.jpeg" style="display: inline-block; vertical-align: middle;">
+							</div>
+							<div class="grid-4">
+								<h3>NIVeL: Neural Implicit Vector Layers for Text-to-Vector Generation</h3>
+								<p>Vikas Thamizharasan, Difan Liu, Matthew Fisher, Nanxuan Zhao, Evangelos Kalogerakis, Michal Lukáč</p>
+								<p><i>Computer Vision and Pattern Recognition (CVPR), 2024</i></p>
+								<br>
+								<a href="#">Coming soon ...</a>
+							</div>
+						</div>
+					</div>
+					<br>
+					<br>
+					<div class="container">
+						<div class="row">
+							<div class="grid-2" style="height:200px; line-height:200px; ">
+								<img src="img/cvpr24.jpeg" style="display: inline-block; vertical-align: middle;">
+							</div>
+							<div class="grid-4">
+								<h3>Visual Layout Composer: Image-Vector Dual Diffusion Model for Design Layout Generation</h3>
+								<p>Mohammad Amin Shabani, Zhaowen Wang, Difan Liu, Nanxuan Zhao, Jimei Yang, Yasutaka Furukawa</p>
+								<p><i>Computer Vision and Pattern Recognition (CVPR), 2024</i></p>
+								<br>
+								<a href="#">Coming soon ...</a>
+							</div>
+						</div>
+					</div>
+					<br>
+					<br>
+					<div class="container">
+						<div class="row">
+							<div class="grid-2" style="height:200px; line-height:200px; ">
+								<img src="img/cvpr24.jpeg" style="display: inline-block; vertical-align: middle;">
+							</div>
+							<div class="grid-4">
+								<h3>Diff-Plugin: Revitalizing Details for Diffusion-based Low-level Tasks</h3>
+								<p>Yuhao Liu, Zhanghan Ke, Fang Liu, Nanxuan Zhao, Rynson W.H. Lau</p>
+								<p><i>Computer Vision and Pattern Recognition (CVPR), 2024</i></p>
+								<br>
+								<a href="#">Coming soon ...</a>
+							</div>
+						</div>
+					</div>
+					<br>
+					<br>
+					<div class="container">
+						<div class="row">
+							<div class="grid-2" style="height:200px; line-height:200px; ">
 								<img src="img/chi2024.png" style="display: inline-block; vertical-align: middle;">
 							</div>
 							<div class="grid-4">
@@ -74,7 +154,8 @@
 								<p>Yang Shi, Yechun Peng, Shengqi Dang, Nanxuan Zhao, Nan Cao</p>
 								<p><i>ACM Conference on Human Factors in Computing Systems (CHI), 2024</i></p>
 								<br>
-								<a href="#">Paper</a>
+								<a href="https://dl.acm.org/doi/10.1145/3613904.3642391">Paper</a>
+								<a href="https://www.youtube.com/watch?v=CeHqbmzFY9U">Video</a>
 							</div>
 						</div>
 					</div>
