update cvpr and sig

--- a/index.html
+++ b/index.html
@@ -67,14 +67,15 @@
 					<div class="container">
 						<div class="row">
 							<div class="grid-2" style="height:200px; line-height:200px; ">
-								<img src="img/sig24.jpeg" style="display: inline-block; vertical-align: middle;">
+								<img src="img/t2v_sig24.png" style="display: inline-block; vertical-align: middle;">
 							</div>
 							<div class="grid-4">
 								<h3>Text-to-vector Generation With Neural Path Representation</h3>
 								<p>Peiying Zhang, Nanxuan Zhao, Jing Liao</p>
 								<p><i>ACM Transactions on Graphics (Proc. SIGGRAPH 2024)</i></p>
 								<br>
-								<a href="#">Coming soon ...</a>
+								<a href="https://intchous.github.io/T2V-NPR/">Project</a>
+								<a href="https://arxiv.org/abs/2405.10317">arXiv</a>
 							</div>
 						</div>
 					</div>
@@ -99,14 +100,15 @@
 					<div class="container">
 						<div class="row">
 							<div class="grid-2" style="height:200px; line-height:200px; ">
-								<img src="img/cvpr24.jpeg" style="display: inline-block; vertical-align: middle;">
+								<img src="img/nivel_cvpr24.png" style="display: inline-block; vertical-align: middle;">
 							</div>
 							<div class="grid-4">
 								<h3>NIVeL: Neural Implicit Vector Layers for Text-to-Vector Generation</h3>
 								<p>Vikas Thamizharasan, Difan Liu, Matthew Fisher, Nanxuan Zhao, Evangelos Kalogerakis, Michal Lukáč</p>
 								<p><i>Computer Vision and Pattern Recognition (CVPR), 2024</i></p>
 								<br>
-								<a href="#">Coming soon ...</a>
+								<a href="https://vikastmz.github.io/NIVeL/">Project</a>
+								<a href="https://arxiv.org/abs/2405.15217">arXiv</a>
 							</div>
 						</div>
 					</div>
@@ -115,14 +117,14 @@
 					<div class="container">
 						<div class="row">
 							<div class="grid-2" style="height:200px; line-height:200px; ">
-								<img src="img/cvpr24.jpeg" style="display: inline-block; vertical-align: middle;">
+								<img src="img/layout_cvpr24.png" style="display: inline-block; vertical-align: middle;">
 							</div>
 							<div class="grid-4">
 								<h3>Visual Layout Composer: Image-Vector Dual Diffusion Model for Design Layout Generation</h3>
 								<p>Mohammad Amin Shabani, Zhaowen Wang, Difan Liu, Nanxuan Zhao, Jimei Yang, Yasutaka Furukawa</p>
 								<p><i>Computer Vision and Pattern Recognition (CVPR), 2024</i></p>
 								<br>
-								<a href="#">Coming soon ...</a>
+								<a href="https://aminshabani.github.io/visual_layout_composer/index.html">Project</a>
 							</div>
 						</div>
 					</div>
@@ -131,14 +133,15 @@
 					<div class="container">
 						<div class="row">
 							<div class="grid-2" style="height:200px; line-height:200px; ">
-								<img src="img/cvpr24.jpeg" style="display: inline-block; vertical-align: middle;">
+								<img src="img/diff_plugin_cvpr24.png" style="display: inline-block; vertical-align: middle;">
 							</div>
 							<div class="grid-4">
 								<h3>Diff-Plugin: Revitalizing Details for Diffusion-based Low-level Tasks</h3>
 								<p>Yuhao Liu, Zhanghan Ke, Fang Liu, Nanxuan Zhao, Rynson W.H. Lau</p>
 								<p><i>Computer Vision and Pattern Recognition (CVPR), 2024</i></p>
 								<br>
-								<a href="#">Coming soon ...</a>
+								<a href="https://yuhaoliu7456.github.io/Diff-Plugin/">Project</a>
+								<a href="https://arxiv.org/abs/2403.00644">arXiv</a>
 							</div>
 						</div>
 					</div>
